--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@reown/appkit": "^1.6.8",
-    "@walletconnect/universal-provider": "^2.17.0",
+    "@stacks/connect": "^8.2.4",
     "@stacks/network": "^6.13.0",
     "@stacks/transactions": "^6.13.0",
+    "@walletconnect/universal-provider": "^2.17.0",
     "buffer": "^6.0.3"
   },
   "devDependencies": {
